app/assets/stylesheets/header.scss
#header {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgb(255, 255, 255);
  position: sticky;
  top: 0px;
  left: 0px;
  width: -webkit-fill-available;
  height: 40px;
  padding: 5px 30px 5px 30px;
  border-bottom-style: solid;
  border-width: 1px;
  border-color: #dee0e1;
  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.04);
  z-index: 1;
}

#inner-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 65vw;
}

#logo {
   color: #B92B27;
  font-size: 30px;
  font-weight: bolder;
  min-width: fit-content;
 }

 #logo:hover {
  //  text-decoration: underline;
   cursor: pointer; 
 }

#feedlogo {
  color: #B92B27;
  font-size: 25px;
  display: flex;
  height: -webkit-fill-available;
 }

 #feedlogo:hover {
   border-bottom: 2px solid #B92B27;
   cursor: pointer; 
 }

.home-name {
  font-weight: 600;
  font-size: 16px;
  padding: 5px 0px 0px 0px;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
}

.home-category-icon {
    height: 25px;
    width: 25px;
    padding: 0px 8px 0px 0px;
}
 
 // div
 .dropdown {
   display: block;
  }

// dropdown button logo in header 
.profile-dropdown {
  height: 30px;
  width: 30px;
  border-radius: 50px;
  margin: 8px 10px 0px 10px;
}
.profile-dropdown:hover {
  cursor: pointer;  
}

// dropdown button for feed item
.drop-button-dots {
  color: #B92B27;
  font-size: 20px;
  padding: 15px;
}
.drop-button-dots:hover {
  cursor: pointer;  
}

// ul
.dropdown-content{ 
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
  font-size: 15px;
  display: none;
  position: absolute;
  background-color: #f9f9f9;
  width: max-content;
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
  z-index: 1;
  height: auto;
  border: solid 1px lightgray;
}

// div ul
.dropdown:hover .dropdown-content {
  display: block;
  margin: 0;
  cursor: pointer; 
}

// .dropdown-content:hover {
//   display: block;
//   font-family: inherit; /* Important for vertical align on mobile phones */
//   margin: 0;
//   cursor: pointer; 
// }  

// ul > li
.dropdown-content > li:hover {
  background-color: #efefef;
  margin: 0;
  cursor: pointer; 
}

.dropdown-options {
  cursor: pointer;
  box-sizing: border-box;
  direction: ltr;
  display: flex;
  -webkit-tap-highlight-color: transparent;
  align-items: center;
  padding: 8px 16px 8px 16px;
  font-size: 13px;
  color: #282829;
}

.dropdown-area {
  display: flex;
  justify-content: flex-end;
}

.searchbar {
  display: flex;
  width: 300px;
  font-size: 13px;
  min-height: 32px;
  font-weight: 400;
  border: 1px solid #e2e2e2;
  border-radius: 3px;
  box-shadow: inset 0 1px 1px rgba(200, 200, 200, 0.3);
}

.searchbar:hover {
  border: solid 1px #2e69ff;
  cursor: pointer;
}

.searchbar-result {
  cursor: pointer;
  box-sizing: border-box;
  direction: ltr;
  display: flex;
  -webkit-tap-highlight-color: transparent;
  align-items: center;
  padding: 8px 16px 8px 16px;
  font-size: 13px;
  color: #282829;
  width: 300px;
}

.mag-glass {
  height: 16px;
  width: 16px;
  padding: 10px;
}

.search-input {
  font-size: 13px;
  font-weight: 400;
  box-sizing: border-box;
  direction: ltr;
  width: 100%;
  box-shadow: none;
  background-color: transparent;
  padding: 0px;
  min-height: 26px;
  height: unset;
  outline: none;
  border: none;
  flex: 1 1 0%;
}

.user-dropdown-name{
  font-weight: bold;
  font-size: 18px;
  color: #282829;
  font-weight: bold;
  font-size: 18px;
  color: #282829;
  padding: 0px 16px 8px 16px;
  border-bottom: 1px solid lightgrey;
}

.user-dropdown-pic{
  height: 40px;
  padding: 10px;
}

.back {
  box-sizing: border-box;
  transition-property: all;
  transition-duration: 180ms;
  transition-timing-function: ease-in-out;
  background-color: rgba(36, 36, 36, 0.9);
  top: 50px;
  left: 0px;
  bottom: 0px;
  right: 0px;
  position: fixed;
}

